--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "enzyme": "2.9.1",
+    "eslint": "^4.3.0",
+    "eslint-plugin-react": "^7.1.0",
     "hjson": "^3.1.0",
     "react-addons-test-utils": "15.6.0",
     "react-scripts": "1.0.7",
